samples/_failures_safe/1761639707_8a6ef9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6070bd1e.c: In function ‘main’:
./samples/SAFE/__tmp_6070bd1e.c:142:5: error: expected expression at end of input
  142 |     decompress_rle(compressed_buf.data, compressed_buf.size, &
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_6070bd1e.c:142:5: error: expected declaration or statement at end of input
